--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,17 @@
 @tailwind utilities;
 
 
+
+@media (min-width:500px) and (max-height:615px){
+    .App{
+        height:auto;
+        padding-bottom:2em;
+    }
+}
+
+@media (max-width:500px) and (max-height:820px){
+    .App{
+        height:auto;
+        padding-bottom:2em;
+    }
+}
