--- a/src/index.css
+++ b/src/index.css
@@ -86,10 +86,10 @@
         padding-bottom:2em;
     }
 }
-
+/* 
 @media (max-width:500px) and (max-height:820px){
     .App{
         height:auto;
         padding-bottom:2em;
     }
-}
+} */
